<resources>
    <string name="app_name">燃吧</string>
    <string name="nav_home">首页</string>
    <string name="nav_home_show">欢迎来到燃吧，让我们一起分享运动的美好。</string>
    <string name="nav_upload">上传</string>
    <string name="nav_account">我的账户</string>
    <string name="nav_group">社区</string>
    <string name="tab_login">登录燃吧</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="video">视频</string>
    <string name="record">拍摄</string>
    <string name="local_video_beauty">视频上传</string>
    <string name="audio_editor">音频处理</string>
    <string name="video_connect">视频拼接</string>
    <string name="video_select">选择视频</string>
    <string name="audio_select">选择音频</string>
    <string name="pcm_2_audio">PCM转音频</string>
    <string name="audio_mix">音频混合</string>
    <string name="audio_mix_select_one">选择第一个音频</string>
    <string name="video_connect_select_one">选择第一个视频</string>
    <string name="audio_mix_select_two">选择第二个音频</string>
    <string name="video_connect_select_two">选择第二个视频</string>
    <string name="change_filter">左右滑动切换滤镜哟...</string>
    <string name="confirm_to_editor_video">点击确定分离音频</string>

    <!-- 登录相关 -->
    <string name="input_phone">&#160;请输入您的手机号</string>
    <string name="login">登录</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="inout_msg_code">请输入验证码</string>
    <string name="logo_welcome">欢迎来到燃吧</string>
    <string name="avatar">头像</string>
    <string name="audioPath">音频路径</string>
    <string name="position">位置</string>
    <string name="topic"># 话题</string>
    <string name="publish_text">发布</string>
    <string name="input_title">请填写视频标题</string>
</resources>
