<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <com.example.nimei1.ranba.CustomToolBar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        app:left_tv_text="@string/tab_login"
        app:left_tv_visible="true"
        app:right_btn_src="@drawable/search_bar"
        app:right_btn_visible="false"
        tools:context="com.example.nimei1.ranba.activity.MainActivity"></com.example.nimei1.ranba.CustomToolBar>

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="150dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/bg_toolbar"
            android:text="@string/logo_welcome" />


        <EditText
            android:id="@+id/mobile_login"
            android:layout_width="348dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/yanzhengma"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/inout_msg_code"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="16sp" />

            <Button
                android:id="@+id/getMsgCode"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1.9"
                android:background="@drawable/btn_radius"
                android:gravity="center"
                android:text="@string/get_msg_code"
                android:textColor="@color/colorWhite"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_radius"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>